--- a/Integração_Dados_IBGE.ipynb
+++ b/Integração_Dados_IBGE.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNiMHFZYCuiORIj+pSLx9AQ",
+      "authorship_tag": "ABX9TyMYuy35eweBLw/fCkF0FRF3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
       "metadata": {
         "id": "rFin8Q64GpkJ"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -119,7 +119,7 @@
       "cell_type": "code",
       "source": [
         "# Manipulando o sistema de arquivos\n",
-        "endereco = Path('/home/debby_matt/Documentos/PYTHON_DW')\n",
+        "endereco = Path('/content/drive/MyDrive/Colab Notebooks')\n",
         "\n",
         "BDODS = endereco / \"ODS.db\"\n",
         "BDDW = endereco / \"DW.db\"\n",
@@ -128,7 +128,7 @@
       "metadata": {
         "id": "Dl6GvsIxJJO8"
       },
-      "execution_count": 61,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -149,16 +149,93 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ziVI_qozKBEu",
-        "outputId": "69b5d6c1-b6b6-48ff-f122-e0145445c100"
+        "outputId": "713d77f4-80dd-4b0e-b790-8f5f714776f4"
       },
-      "execution_count": 70,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Endereço não existe! Favor, verificar!\n"
+            "Banco de dados já existem !\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# MANIPULANDO OS BANCO DE DADOS CRIADOS\n"
+      ],
+      "metadata": {
+        "id": "pDLPNsQw29r0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Conectar no BDODS\n",
+        "conexaoODS = sql.connect(BDODS)\n",
+        "\n",
+        "# Criar a tabela tbLogMunic e carregar os dados do DF DadosIBGE\n",
+        "DadosIBGE.to_sql('tabelaLogMunic', conexaoODS, if_exists=\"append\")\n",
+        "\n",
+        "#Confirmar a transação\n",
+        "conexaoODS.commit()\n",
+        "\n",
+        "#Fechar a conexão\n",
+        "conexaoODS.close()\n",
+        "\n",
+        "print('Carga do BDODS concluída!')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_pBQfo8421LW",
+        "outputId": "7c0543de-f840-463b-9c1d-2589b3c08126"
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Carga do BDODS concluída!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Conectar no BDDW\n",
+        "conexaoDW = sql.connect(BDDW)\n",
+        "\n",
+        "#Selecionar somente as colunas para criação da dMunicipio\n",
+        "DadosIBGE = DadosIBGE[['Munic','Cod']]\n",
+        "\n",
+        "#Criar a tabela dMunicipio e carregar os dados do DF DadosIBGE\n",
+        "DadosIBGE.to_sql('dMunicipio',conexaoDW,if_exists=\"replace\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Zgx2O7ou3iWN",
+        "outputId": "c58d1b37-2fa4-43ac-937a-7d909e93acac"
+      },
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "141"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 86
         }
       ]
     }
