--- a/Integração_Dados_IBGE.ipynb
+++ b/Integração_Dados_IBGE.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMYuy35eweBLw/fCkF0FRF3",
+      "mount_file_id": "1nOZ0gJFsOtAQbEOuwjYkYrQ7VDgYBBxo",
+      "authorship_tag": "ABX9TyNj72/+5kFOZ+zT32R06fTG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +38,18 @@
       "metadata": {
         "id": "rFin8Q64GpkJ"
       },
-      "execution_count": null,
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dtCarga = datetime.today().strftime('%d/%m/%Y %H:%M')"
+      ],
+      "metadata": {
+        "id": "8q0UYn26A_en"
+      },
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -61,7 +73,7 @@
       "metadata": {
         "id": "sJMORD4QG578"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -77,7 +89,7 @@
       "metadata": {
         "id": "PW64tHKMHQLT"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -89,21 +101,21 @@
       "metadata": {
         "id": "S8STS80rJChx"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# ADICIONAR UMA COLUNA DE DATA E HORA DE CARGA\n",
-        "DadosIBGE['dataCarga'] = datetime.today().strftime('%d/%m/%y %H:%M')\n",
+        "DadosIBGE['dataCarga'] = dtCarga\n",
         "\n",
         "# DadosIBGE"
       ],
       "metadata": {
         "id": "vAwvGWt3H5wQ"
       },
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -128,7 +140,7 @@
       "metadata": {
         "id": "Dl6GvsIxJJO8"
       },
-      "execution_count": 72,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -149,9 +161,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ziVI_qozKBEu",
-        "outputId": "713d77f4-80dd-4b0e-b790-8f5f714776f4"
+        "outputId": "83732d3b-8950-434b-8071-8dc931a0108a"
       },
-      "execution_count": 73,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,9 +205,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_pBQfo8421LW",
-        "outputId": "7c0543de-f840-463b-9c1d-2589b3c08126"
+        "outputId": "81a1d08e-e0a1-4644-d1f1-16fcf4141e75"
       },
-      "execution_count": 80,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,28 +228,112 @@
         "DadosIBGE = DadosIBGE[['Munic','Cod']]\n",
         "\n",
         "#Criar a tabela dMunicipio e carregar os dados do DF DadosIBGE\n",
-        "DadosIBGE.to_sql('dMunicipio',conexaoDW,if_exists=\"replace\")\n"
+        "DadosIBGE.to_sql('dMunicipio',conexaoDW,if_exists=\"replace\")\n",
+        "\n",
+        "#Confirmar a transação\n",
+        "conexaoDW.commit()\n",
+        "\n",
+        "#Fechar a conexão\n",
+        "conexaoDW.close()\n",
+        "\n",
+        "print('Carga do DW concluída!')\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Zgx2O7ou3iWN",
-        "outputId": "c58d1b37-2fa4-43ac-937a-7d909e93acac"
+        "outputId": "fc7e47fe-a328-43d4-b5c1-d67956ee19c0"
       },
-      "execution_count": 86,
+      "execution_count": 29,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "141"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 86
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Carga do DW concluída!\n"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "# CARGA DOS DADOS DO PIB DE SETORES DE MATO GROSSO"
+      ],
+      "metadata": {
+        "id": "Q_4_5a6C644U"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Definir o endereço físico do arquivo CSV\n",
+        "LocalArquivo = \"/content/drive/MyDrive/Colab Notebooks/\""
+      ],
+      "metadata": {
+        "id": "nUVtdqM96bmo"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Criar Data Frame com os dados dos PIB - SETOR - MT\n",
+        "tbLogPIBsetor = pd.DataFrame(pd.read_csv(LocalArquivo + \"PIB-SETOR-MT.csv\"))"
+      ],
+      "metadata": {
+        "id": "q0zfH6mz7vpK"
+      },
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Criando coluna com a data da carga\n",
+        "tbLogPIBsetor['dtCarga'] = dtCarga\n"
+      ],
+      "metadata": {
+        "id": "Gv19PtVZ_iYX"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# CARGA DOS DADOS DOS IMPOSTOS SOBRE O  PIB DOS SETORES DO ESTADO DE MATO GROSSO"
+      ],
+      "metadata": {
+        "id": "2Za5lF7eCL3V"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Criar Data Frame com os dados dos PIB - MT\n",
+        "tbLogPIBmt = pd.DataFrame(pd.read_csv(LocalArquivo + \"PIB-MT.csv\"))"
+      ],
+      "metadata": {
+        "id": "QkmR99A0D4Pr"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Criando coluna com a data da carga\n",
+        "tbLogPIBmt['dtCarga'] = dtCarga\n"
+      ],
+      "metadata": {
+        "id": "MUjQXk2NEX_f"
+      },
+      "execution_count": 50,
+      "outputs": []
     }
   ]
 }
